--- a/style.css
+++ b/style.css
@@ -30,11 +30,13 @@ body {
   letter-spacing: 4px;
   font-family: "Courier New", Courier, monospace;
   border: none;
+  box-shadow: 2px 2px 24px 12px rgb(0, 0, 0, 0.25);
 }
 
 @media screen and (max-width: 1000px) {
   .button {
     margin-top: 240px;
     font-family: "Courier New", Courier, monospace;
+    box-shadow: 2px 2px 24px 12px rgba(0, 0, 0, 0.6);
   }
 }
