--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
   margin: 0;
-
   display: flex;
 }
 
@@ -31,6 +30,12 @@ body {
   font-family: "Courier New", Courier, monospace;
   border: none;
   box-shadow: 2px 2px 24px 12px rgb(0, 0, 0, 0.25);
+}
+
+button:disabled {
+  background-color: rgb(168, 17, 74);
+  color: gray;
+  cursor: auto;
 }
 
 @media screen and (max-width: 1000px) {
