--- a/style.css
+++ b/style.css
@@ -30,12 +30,56 @@ body {
   font-family: "Courier New", Courier, monospace;
   border: none;
   box-shadow: 2px 2px 24px 12px rgb(0, 0, 0, 0.25);
+  text-decoration: none;
 }
 
 button:disabled {
   background-color: rgb(168, 17, 74);
   color: gray;
   cursor: auto;
+}
+
+.joke-container {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  font-family: "Courier New", Courier, monospace;
+  background: rgba(0, 0, 0, 0.7);
+  transition: opacity 500ms;
+  visibility: hidden;
+  opacity: 0;
+}
+.joke-container:target {
+  visibility: visible;
+  opacity: 1;
+}
+
+.joke-content {
+  margin: 70px auto;
+  padding: 20px;
+  background: #fff;
+  border-radius: 5px;
+  color: rgb(255, 52, 130);
+  font-weight: bold;
+  width: 30%;
+  position: relative;
+  transition: all 5s ease-in-out;
+}
+
+.joke-container .close {
+  position: absolute;
+  top: 50px;
+  right: 180px;
+  transition: all 200ms;
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  color: whitesmoke;
+}
+.joke-content .close:hover {
+  color: rgb(255, 52, 130);
 }
 
 @media screen and (max-width: 1000px) {
